Scope to `.css-truncate-target` for correct nesting behavior

--- a/src/truncate/truncate.scss
+++ b/src/truncate/truncate.scss
@@ -25,7 +25,8 @@
     max-width: 10000px !important;
   }
 
-  &.truncate-left {
+  &.truncate-left .css-truncate-target,
+  &.truncate-left.css-truncate-target {
     direction: rtl;
   }
 }
